--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,267 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/editText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
+        android:textColor="#33A8FF"
         android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
+        android:textSize="48dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAlignment="textEnd" />
+
+    <EditText
+        android:id="@+id/result"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="#33A8FF"
+        android:ems="10"
+        android:textSize="48dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        android:textAlignment="textEnd" />
+
+    <Button
+        android:id="@+id/buttonClear"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="Clear"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/buttonPercentage"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="%"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/buttonClear"
+        app:layout_constraintTop_toTopOf="@+id/buttonClear" />
+
+    <Button
+        android:id="@+id/buttonDivide"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="%"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/buttonPercentage"
+        app:layout_constraintTop_toTopOf="@+id/buttonPercentage" />
+
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="7"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />
+
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="8"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button7"
+        app:layout_constraintTop_toTopOf="@+id/button7" />
+
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="9"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button8"
+        app:layout_constraintTop_toTopOf="@+id/button8" />
+
+    <Button
+        android:id="@+id/buttonMultiply"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="*"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button9"
+        app:layout_constraintTop_toTopOf="@+id/button9" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="4"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="5"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="@+id/button4" />
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="6"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button5"
+        app:layout_constraintTop_toTopOf="@+id/button5" />
+    <Button
+        android:id="@+id/buttonPlus"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="+"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button6"
+        app:layout_constraintTop_toTopOf="@+id/button6" />
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="1"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="2"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button1"
+        app:layout_constraintTop_toTopOf="@+id/button1" />
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="3"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button2"
+        app:layout_constraintTop_toTopOf="@+id/button2" />
+    <Button
+        android:id="@+id/buttonMinus"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="-"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button3"
+        app:layout_constraintTop_toTopOf="@+id/button3" />
+    <Button
+        android:id="@+id/buttonDot"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="."
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
+
+    <Button
+        android:id="@+id/button0"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="0"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/buttonDot"
+        app:layout_constraintTop_toTopOf="@+id/buttonDot" />
+    <Button
+        android:id="@+id/buttonEqual"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:textColor="#FFFFFF"
+        android:background="33A8FF#"
+        android:textStyle="bold"
+        android:text="%"
+        android:textSize="20sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="@+id/button0"
+        app:layout_constraintTop_toTopOf="@+id/button0" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
